--- a/config/helix/config.toml
+++ b/config/helix/config.toml
@@ -45,3 +45,7 @@ C-c = ":clipboard-yank"
 
 [keys.insert]
 C-c = "normal_mode"
+
+[keys.normal."space"]
+f = "file_picker_in_current_directory"
+F = "file_picker"
